--- a/src/main/webapp/WEB-INF/views/product/list.html
+++ b/src/main/webapp/WEB-INF/views/product/list.html
@@ -6,6 +6,9 @@
 <p>
     <a href="/category">Category list</a>
 </p>
+<p>
+    <a href="/shopping-cart">Your cart</a>
+</p>
 <h3>Product</h3>
 <form>
     Search by name:
@@ -26,6 +29,9 @@
         <th>Category</th>
         <th>Edit</th>
         <th>Delete</th>
+        <th>Add To Cart</th>
+
+
     </tr>
     <th:block th:each="pro : ${product}">
         <tr>
@@ -39,6 +45,8 @@
             <td th:unless="${pro.category}"></td>
             <td><a th:href="@{/product/edit-product/__${pro.id}__ }">Edit</a></td>
             <td><a th:href="@{/product/delete-product/__${pro.id}__ }">Delete</a></td>
+            <td><a th:href="@{/product/add/__${pro.id}__(action='list')}">Add To Cart</a></td>
+
         </tr>
     </th:block>
 </table>
